--- a/localization/english/religion/religion_protestant_l_english.yml
+++ b/localization/english/religion/religion_protestant_l_english.yml
@@ -1,4 +1,14 @@
 ﻿l_english:
+ chaldean:0 "Kaldetha"
+ chaldean_adj:0 "Kaldetha"
+ chaldean_adherent:0 "Kaldetha"
+ chaldean_adherent_plural:0 "Kaldetha"
+ chaldean_desc:1 "The Assyrian Church of the East represents non-Roman Christianity.  Spread by the Apostles who went east into Persia, the Church - sometimes called Chaldeans - spread through the Middle East and into Asia.  Without state support it gradually died out in many places, leaving behind beautiful churches and haunting graveyards.  They share several key beliefs with Nestorians but predate them by centuries."
+ wahhabi:0 "Wahhābi"
+ wahhabi_adj:0 "Wahhābi"
+ wahhabi_adherent:0 "Wahhābi"
+ wahhabi_adherent_plural:0 "Wahhābiyyah"
+ wahhabi_desc:1 "Wahhabiism is the latest incarnation of Kharjite Islam.  A nationalist Arab sect of Islam, it preaches a return to the fundamentals of the faith when the Caliphate was united and strong.  According to its beliefs, Islam lost its way when it split apart and began incorporating ideas from other faiths.  Now it is time for a renewal of faith."
  tewahedo:0 "Täwahedo"
  tewahedo_adj:0 "Täwahedo"
  tewahedo_adherent:0 "Täwahedo"
