--- a/localization/english/replace/culture_replace_l_english.yml
+++ b/localization/english/replace/culture_replace_l_english.yml
@@ -10,9 +10,9 @@
  turkish_noun:0 "Oǧuz"
  bolghar:0 "Bulǧar"
  bolghar_collective_noun:1 "Bulǧar"
- egyptian:0 "Miṣriyy"
+ egyptian:0 "Miśriyy"
  egyptian_prefix:0 "Egypto"
- egyptian_collective_noun:1 "Miṣriyyīna"
+ egyptian_collective_noun:1 "Miśriyyīna"
  anglo_saxon:0 "Angelcynn"
  anglo_saxon_collective_noun:0 "Angelcynn"
  cornish:0 "Kernowek"
@@ -522,10 +522,10 @@
  kitebacilweism_adherent:0 "Kitêbacilwei"
  kitebacilweism_adherent_plural:0 "Kitêbacilwei"
  kitebacilweism_adj:0 "Kitêbacilwei"
- krishnaism:0 "Kṛṣṇai"
- krishnaism_adherent:0 "Kṛṣṇai"
- krishnaism_adherent_plural:0 "Kṛṣṇai"
- krishnaism_adj:0 "Kṛṣṇai"
+ krishnaism:0 "Kṛśnai"
+ krishnaism_adherent:0 "Kṛśnai"
+ krishnaism_adherent_plural:0 "Kṛśnai"
+ krishnaism_adj:0 "Kṛśnai"
  kushitism_pagan:0 "Maataw Kush"
  kushitism_pagan_adherent:0 "Maataw Kush"
  kushitism_pagan_adherent_plural:1 "Maataw Kush"
@@ -610,10 +610,10 @@
  najdat_adherent:0 "Najdatī"
  najdat_adherent_plural:0 "Najdatī"
  najdat_adj:0 "Najdatī"
- nestorian:0 "Nustūr"
- nestorian_adherent:0 "Nustūr"
- nestorian_adherent_plural:0 "Nustūrīyyah"
- nestorian_adj:0 "Nustūr"
+ nestorian:0 "Madenhā"
+ nestorian_adherent:0 "Madenhā"
+ nestorian_adherent_plural:0 "Madenhā"
+ nestorian_adj:0 "Madenhā"
  nizari:0 "Nizāri"
  nizari_adherent:0 "Nizāri"
  nizari_adherent_plural:0 "Nizāriyyūn"
@@ -754,10 +754,10 @@
  urartuism_adherent:1 "Arewordi"
  urartuism_adherent_plural:1 "Arewordi"
  urartuism_adj:1 "Arewordi"
- vaishnavism:0 "Vaisṇavasampradāyaḥ"
- vaishnavism_adherent:0 "Vaisṇavasampradāyaḥ"
- vaishnavism_adherent_plural:0 "Vaisṇavasampradāyaḥ"
- vaishnavism_adj:1 "Vaisṇavasampradāyaḥ"
+ vaishnavism:0 "Vaisnavasampradāyaḥ"
+ vaishnavism_adherent:0 "Vaisnavasampradāyaḥ"
+ vaishnavism_adherent_plural:0 "Vaisnavasampradāyaḥ"
+ vaishnavism_adj:1 "Vaisnavasampradāyaḥ"
  vajrayana:0 "Vajrayāna"
  vajrayana_adherent:0 "Vajrayāna"
  vajrayana_adherent_plural:0 "Vajrayāna"
