Localized titles starting.

--- a/localization/english/names/coptic_character_names_l_english.yml
+++ b/localization/english/names/coptic_character_names_l_english.yml
@@ -123,7 +123,7 @@
  Atam:0 "Atām"
  Atinodaros:0 "Atīnodāros"
  Atum:0 "Atum"
- Aw@l:0 "Awəl"
+ Awel:0 "Awəl"
  Awanah:0 "Awānah"
  Awraham:0 "Awraham"
  Baabe:0 "Baabe"
@@ -163,7 +163,7 @@
  Bistai:0 "Bistai"
  Btolemaios:0 "Btolemaios"
  Danyal:0 "Danyal"
- Dau@id:0 "Dauəid"
+ Daueid:0 "Dauəid"
  Dimitrios:0 "Dīmītrios"
  Dianisios:0 "Diānīsios"
  Diodaros:0 "Diodāros"
