--- a/localization/english/names/eu4_names_l_english.yml
+++ b/localization/english/names/eu4_names_l_english.yml
@@ -2532,7 +2532,7 @@
  Blasi:0 "Blasi"
  Blaxius:0 "Blaxius"
  Blaz:0 "Blaz"
- Blaz	Davorin	Etbin:0 "Blaz	Davorin	Etbin"
+ Blaz_Davorin_Etbin:0 "Blaz Davorin Etbin"
  Blazej:0 "Blazej"
  Blerta:0 "Blerta"
  Blije:0 "Blije"
@@ -7530,7 +7530,7 @@
  Jovirdas:0 "Jovirdas"
  Joymati:0 "Joymati"
  Jozef:0 "Jozef"
- Jozefa	Katarina:0 "Jozefa	Katarina"
+ Jozefa_Katarina:0 "Jozefa Katarina"
  Jualb:0 "Jualb"
  Judit:0 "Judit"
  Judith:0 "Judith"
@@ -8666,7 +8666,7 @@
  Konops:0 "Konops"
  KonrAAd:0 "Konrád"
  Konrad:0 "Konrad"
- Konrad	Lovro:0 "Konrad	Lovro"
+ Konrad_Lovro:0 "Konrad Lovro"
  Konstancia:0 "Konstancia"
  Konstancja:0 "Konstancja"
  Konstantia:0 "Konstantia"
@@ -12729,7 +12729,7 @@
  Peou:0 "Peou"
  Pepagomenos:0 "Pepagomenos"
  Pepanos:0 "Pepanos"
- Pequaket	Piscataqua:0 "Pequaket	Piscataqua"
+ Pequaket_Piscataqua:0 "Pequaket Piscataqua"
  Pequannock:0 "Pequannock"
  Pequaret:0 "Pequaret"
  Pequotauk:0 "Pequotauk"
