--- a/localization/english/names/hip_names_l_english.yml
+++ b/localization/english/names/hip_names_l_english.yml
@@ -11941,7 +11941,7 @@
  MariMAAtEEvatikal:0 "MariMâtêvatikal"
  MariNNo:0 "Mariño"
  Maria:0 "Maria"
- Maria	Marina:0 "Maria	Marina"
+ Maria_Marina:0 "Maria Marina"
  Mariam:0 "Mariam"
  Mariami:0 "Mariami"
  Mariamma:0 "Mariamma"
