--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ voivode_feudal_male_hungarian:0 "Vajda"
+ voivode_feudal_female_hungarian:0 "Vajdané"
+ voivodeship_feudal_hungarian:0 "Vajdaság"
  aesthetics_azeri_turkish_name:0 "$azeri_turkish$"
  aesthetics_anatolian_turkish_name:0 "$anatolian_turkish$"
  aesthetics_hungarian:0 "$hungarian$"
