--- a/localization/english/replace/fecr_culture_titles_l_english.yml
+++ b/localization/english/replace/fecr_culture_titles_l_english.yml
@@ -301,14 +301,14 @@
  duchy_tribal_cornish:0 "Tywysogaeth o"
  kingdom_tribal_cornish:0 "Teyrnas o"
  empire_tribal_cornish:0 "Teyrnas o"
- duke_feudal_male_lithuanian:0 "Kunigaiktis"
- duke_feudal_female_lithuanian:0 "Kunigaiktiene"
- duke_tribal_male_lithuanian:0 "Kunigaiktis"
- duke_tribal_female_lithuanian:0 "Kunigaiktiene"
- king_feudal_male_lithuanian:0 "Didysis Kunigaiktis"
- king_feudal_female_lithuanian:0 "Dydioji Kunigaiktiene"
- emperor_feudal_female_lithuanian:0 "Dydioji Kunigaiktiene"
- kingdom_feudal_lithuanian:0 "Dydioji Kunigaiktyste"
+ duke_feudal_male_lithuanian:0 "Kunigaikštis"
+ duke_feudal_female_lithuanian:0 "Kunigaikštienė"
+ duke_tribal_male_lithuanian:0 "Kunigaikštis"
+ duke_tribal_female_lithuanian:0 "Kunigaikštienė"
+ king_feudal_male_lithuanian:0 "Didysis Kunigaikštis"
+ king_feudal_female_lithuanian:0 "Dydioji Kunigaikštienė"
+ emperor_feudal_female_lithuanian:0 "Dydioji Kunigaikštienė"
+ kingdom_feudal_lithuanian:0 "Dydioji Kunigaikštyste"
  count_feudal_male_lithuanian:0 "Vaivadas"
  baron_feudal_male_lithuanian:0 "Bajoras"
  count_tribal_male_lithuanian:0 "Vaivadas"
@@ -414,22 +414,22 @@
  baron_feudal_female_polish:0 "Kasztelana"
  count_feudal_male_polish:0 "Starosta"
  count_feudal_female_polish:0 "Staroscina"
- duke_feudal_male_polish:0 "Ksiaze"
- duke_feudal_female_polish:0 "Ksiezna"
+ duke_feudal_male_polish:0 "Książę"
+ duke_feudal_female_polish:0 "Księżna"
  king_feudal_male_polish:0 "Król"
  king_feudal_female_polish:0 "Królowa"
  emperor_feudal_male_polish:0 "Cesarz"
  emperor_feudal_female_polish:0 "Cesarzowa"
  barony_feudal_polish:0 "Kasztelania"
  county_feudal_polish:0 "Starostwo"
- duchy_feudal_polish:0 "Ksiestwo"
+ duchy_feudal_polish:0 "Księstwo"
  baron_republic_male_polish:0 "Burmistrz"
  count_republic_male_polish:0 "Wójt"
- county_tribal_polish:0 "Plemie"
+ county_tribal_polish:0 "Plemię"
  count_tribal_male_polish:0 "Wódz"
  count_tribal_female_polish:0 "Wódzowa"
- duke_tribal_male_polish:0 "Ksiaze"
- duke_tribal_female_polish:0 "Ksiezna"
+ duke_tribal_male_polish:0 "Książę"
+ duke_tribal_female_polish:0 "Księżna"
  count_feudal_male_pommeranian:0 "Knjes"
  duke_feudal_male_pommeranian:0 "Prince"
  count_feudal_male_croatian:0 "Župan"
@@ -474,12 +474,12 @@
  county_tribal_hungarian:0 "Törzs"
  count_tribal_male_hungarian:0 "Törzsfő"
  count_tribal_female_hungarian:0 "Törzsfőné"
- duchy_feudal_hungarian:0 "Fejedelemség"
- duke_feudal_male_hungarian:0 "Fejedelem"
- duke_feudal_female_hungarian:0 "Fejedelemasszony"
- kingdom_feudal_hungarian:0 "Nagyfejedelemség"
- king_feudal_male_hungarian:0 "Nagyfejedelem"
- king_feudal_female_hungarian:0 "Nagyfejedelemasszony"
+ duchy_tribal_hungarian:0 "Fejedelemség"
+ duke_tribal_male_hungarian:0 "Fejedelem"
+ duke_tribal_female_hungarian:0 "Fejedelemasszony"
+ kingdom_tribal_hungarian:0 "Nagyfejedelemség"
+ king_tribal_male_hungarian:0 "Nagyfejedelem"
+ king_tribal_female_hungarian:0 "Nagyfejedelemasszony"
  duchy_feudal_hungarian_independent:0 "Fejedelemség"
  duke_feudal_male_hungarian_independent:0 "Fejedelem"
  duke_feudal_female_hungarian_independent:0 "Fejedelemasszony"
@@ -1258,7 +1258,7 @@
  county_tribal_uyghur:0 "Tutuqluk"
  duchy_tribal_uyghur:0 "Idiqutluk"
  kingdom_tribal_uyghur:0 "Khanluk"
- baron_feudal_male_uyghur:0 "Wali"
+ baron_tribal_male_uyghur:0 "Wali"
  count_feudal_male_uyghur:0 "Tutuq"
  count_feudal_female_uyghur:0 "Tutuqa"
  duke_feudal_male_uyghur:0 "Idiqut"
@@ -1300,7 +1300,7 @@
  county_tribal_karluk:0 "Tutuqluk"
  duchy_tribal_karluk:0 "Iligluk"
  kingdom_tribal_karluk:0 "Khanluk"
- baron_feudal_male_karluk:0 "Wali"
+ baron_tribal_male_karluk:0 "Wali"
  baron_feudal_male_turkmen:0 "Muqta'"
  count_feudal_male_turkmen:0 "Beg"
  count_feudal_female_turkmen:0 "Bega"
