Lithuanian fix again.

--- a/localization/english/replace/fecr_culture_titles_l_english.yml
+++ b/localization/english/replace/fecr_culture_titles_l_english.yml
@@ -306,9 +306,9 @@
  duke_tribal_male_lithuanian:0 "Kunigaikštis"
  duke_tribal_female_lithuanian:0 "Kunigaikštienė"
  king_feudal_male_lithuanian:0 "Didysis Kunigaikštis"
- king_feudal_female_lithuanian:0 "Dydioji Kunigaikštienė"
- emperor_feudal_female_lithuanian:0 "Dydioji Kunigaikštienė"
- kingdom_feudal_lithuanian:0 "Dydioji Kunigaikštyste"
+ king_feudal_female_lithuanian:0 "Dydžioji Kunigaikštienė"
+ emperor_feudal_female_lithuanian:0 "Dydžioji Kunigaikštienė"
+ kingdom_feudal_lithuanian:0 "Dydžioji Kunigaikštyste"
  count_feudal_male_lithuanian:0 "Vaivadas"
  baron_feudal_male_lithuanian:0 "Bajoras"
  count_tribal_male_lithuanian:0 "Vaivadas"
