Replacing the static placement of Jews and Romani with a more dynamic system. Migrations still not implemented.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -1,4 +1,16 @@
 ﻿l_english:
+ jewish_community_very_small:0 "Insignificant Jewish Community"
+ jewish_community_small:0 "Small Jewish Community"
+ jewish_community_large:0 "Sizeable Jewish Community"
+ jewish_community_large:0 "Substantial Jewish Community"
+ integrated_gypsy_community_very_small:0 "Insignificant Integrated Gypsy Community"
+ oppressed_gypsy_community_very_small:0 "Insignificant Oppressed Gypsy Community"
+ integrated_gypsy_community_small:0 "Small Integrated Gypsy Community"
+ oppressed_gypsy_community_small:0 "Small Oppressed Gypsy Community"
+ integrated_gypsy_community_large:0 "Sizeable Integrated Gypsy Community"
+ oppressed_gypsy_community_large:0 "Sizeable Oppressed Gypsy Community"
+ integrated_gypsy_community_very_large:0 "Substantial Integrated Gypsy Community"
+ oppressed_gypsy_community_very_large:0 "Substantial Oppressed Gypsy Community"
  jew_backstory:0 "Legally banned from owning land, prohibited from virtually all professions save for banking and trade, often voluntarily self-segregated from mainstream society, the Jews were always viewed with suspicion and jealousy at best, and with outright hatred and libellous accusations at worst - however, what doesn't kill you, makes you stronger, and all the pogroms and discrimination have only helped to make the Jewish community one of hardy survivors.\nIt may upset several of our constituents, but we could 'raid' the Jewish quarters for hidden talent - after all, desperate times call for desperate measures, right?"
  gypsy_backstory:0 "The Gypsies are a nomadic group of people believed to be light-fingered, clannish, secretive and enigmatic, earning their daily bread by making music, fortune-telling and and relieving the unsuspecting gadjo of their property.\nWhile it may upset several of our constituents, we could employ one of them to oversee our more clandestine operations."
  hire_jewish_spymaster_ashkenazi:0 "Hire Jewish Spymaster"
