Commiting current changes. Considering more.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -93,6 +93,11 @@
  jewish_courtier.0006.a:0 "Oh well, at least my debts are null and void..."
  jewish_courtier.0007.a:0 "Welcome back, noble sons of Abraham..."
  jewish_courtier.0008.a:0 "I wonder how long this will last."
+ benefactor_of_the_jews:0 "Benefactor of the Jews"
+ jewish_courtier.0011.t:0 "Jewish Refugees Arrive!"
+ jewish_courtier.0011.desc:0 "A neighbouring realm has expelled the Jews, seizing their wealth and either killing or forcibly converting those who refuse to leave. Jews began fleeing in all directions in search of a new host land, and ours is one such realm."
+ jewish_courtier.0011.a:0 "Welcome, noble sons of Abraham..."
+ jewish_courtier.0011.b:0 "Our hospitality has a price, Jews..."
  gypsy_courtier.0005:0 "Expulsion of the Gypsies!"
  gypsy_courtier.0006:0 "Liege is expelling the Gypsies"
  gypsy_courtier.0007:0 "Gypsies welcomed back"
