--- a/localization/english/replace/fecr_culture_titles_l_english.yml
+++ b/localization/english/replace/fecr_culture_titles_l_english.yml
@@ -304,11 +304,20 @@
  king_feudal_male_lithuanian:0 "Didysis Kunigaikštis"
  king_feudal_female_lithuanian:0 "Dydžioji Kunigaikštienė"
  emperor_feudal_female_lithuanian:0 "Dydžioji Kunigaikštienė"
+ duchy_feudal_lithuanian:0 "Kunigaikštyste"
+ duchy_tribal_lithuanian:0 "Kunigaikštyste"
  kingdom_feudal_lithuanian:0 "Dydžioji Kunigaikštyste"
- count_feudal_male_lithuanian:0 "Vaivadas"
+ count_feudal_male_lithuanian:0 "Grafas"
+ count_feudal_female_lithuanian:0 "grafiené"
+ county_feudal_lithuanian:0 "Grafysté"
  baron_feudal_male_lithuanian:0 "Bajoras"
+ baron_feudal_female_lithuanian:0 "Bajoraité"
+ barony_feudal_lithuanian:0 "Baronija"
  count_tribal_male_lithuanian:0 "Vaivadas"
+ county_tribal_lithuanian:0 "Gentis"
  baron_tribal_male_lithuanian:0 "Bajoras"
+ count_tribal_female_lithuanian:0 "Valdymas"
+ baron_tribal_female_lithuanian:0 "Bajoraité"
  count_feudal_male_english:0 "Earl"
  county_feudal_english:0 "Earldom"
  baron_republic_male_english:0 "Sheriff"
@@ -2004,10 +2013,17 @@
  empire_feudal_prussian:0 "Riki"
  emperor_feudal_male_prussian:0 "Rikis"
  king_feudal_male_prussian:0 "Konagis"
- duke_feudal_male_prussian:0 "Waldnika"
+ king_feudal_female_prussian:0 "Kunnegini"
+ kingdom_feudal_prussian:0 "Kunnegista"
+ duke_feudal_male_prussian:0 "Ercógs"
+ duke_feudal_female_prussian:0 "Ercógini"
+ duchy_feudal_prussian:0 "Ercógista"
  duke_tribal_male_prussian:0 "Waldnika"
- count_feudal_male_prussian:0 "Waldwiko"
+ count_feudal_male_prussian:0 "Gréwi"
+ count_feudal_female_prussian:0 "Gréwini"
+ county_feudal_prussian:0 "Gréwista"
  count_tribal_male_prussian:0 "Waldwiko"
+ county_tribal_prussian:0 "Gintu"
  baron_feudal_male_prussian:0 "Waldunas"
  baron_feudal_female_prussian:0 "Supuni"
  baron_tribal_male_prussian:0 "Waldunas"
