More fixes to the population growth algorithm.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -2,7 +2,7 @@
  jewish_community_very_small:0 "Insignificant Jewish Community"
  jewish_community_small:0 "Small Jewish Community"
  jewish_community_large:0 "Sizeable Jewish Community"
- jewish_community_large:0 "Substantial Jewish Community"
+ jewish_community_very_large:0 "Substantial Jewish Community"
  integrated_gypsy_community_very_small:0 "Insignificant Integrated Gypsy Community"
  oppressed_gypsy_community_very_small:0 "Insignificant Oppressed Gypsy Community"
  integrated_gypsy_community_small:0 "Small Integrated Gypsy Community"
