Some more pimping to the two custom map modes.

--- a/localization/english/decisions_gypsy_jew_courtier_l_english.yml
+++ b/localization/english/decisions_gypsy_jew_courtier_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ jewish_population_map:0 "Jewish Presence"
+ gypsy_population_map:0 "Gypsy Presence"
  jewish_community_very_small:0 "Insignificant Jewish Community"
  jewish_community_small:0 "Small Jewish Community"
  jewish_community_large:0 "Sizeable Jewish Community"
