Added resource-specific buildings.

--- a/localization/english/replace/kiev_l_english.yml
+++ b/localization/english/replace/kiev_l_english.yml
@@ -476,10 +476,8 @@
  e_russia:0 "Rossija"
  e_russia_adj:0 "Rossijsk"
  e_russia_pre:0 "Rossijsk"
- k_ruthenia:0 "Rutenija"
- k_ruthenia_adj:0 "Rutensk"
- k_volga_bulgaria:0 "Volžskaja Bulgarija"
- k_volga_bulgaria_adj:0 "Volžsko-Bulgarsk"
+ k_ruthenia:0 "Rusʹ"
+ k_ruthenia_adj:0 "Russki"
  b_volkovysk:0 "Volkovysk"
  b_bielastock:0 "Belostok"
  k_galicia-volhynia:0 "Galickaja Rusʹ"
