Ported over the Eunuch event from CK2.

--- a/localization/english/eastern_trade_l_english.yml
+++ b/localization/english/eastern_trade_l_english.yml
@@ -123,3 +123,17 @@
  building_trade_build_jewelry_01_desc:0 "Jewelry is one of the greatest signs of wealth, and naturally, those who possess it desire to show off. Jewelry can be produced from a wide variety of materials, but it normally invlolves the combination of a frame made from a precious metal - such as gold or silver - and an ornament made from a gem, diamond, pearl, amber or even lapis lazuli."
  building_type_trade_build_jewelry_01:0 "$building_trade_build_jewelry_01$"
  building_type_trade_build_jewelry_01_desc:0 "$building_trade_build_jewelry_01_desc$"
+ # Event copied from CK2
+ EVTITLELoR.885:0 "A Merchant from the Orient"
+ EVTDESCLoR.885:0 "A large merchant caravan from distant lands has arrived at the gates of your stronghold. Their leader, a jovial man of massive girth, pleads with you in a strange accent to grant them shelter from the elements for the night."
+ EVTOPTALoR.885:0 "Very well. Let them in."
+ EVTOPTBLoR.885:0 "No, these peddlers may sleep in a ditch for all I care."
+ send_merchants_away:0 "You send the merchants away."
+ EVTTOOLTIPLoR.886:0 "The merchant caravan spends the night within your walls."
+ EVTDESCLoR.886:0 "As evening falls, the fat merchant sits by the fire and regales you and the rest of the court with stories of his travels. His appetite seems insatiable, but as you do not wish to prove a poor host, you order your servants to bring in a second serving."
+ EVTOPTALoR.886:0 "Tell us more about this mythical realm of Hindustan."
+ eunuch_offer:0 "The merchant continues his tales."
+ EVTDESCLoR.887:0 "Dawn breaks, and the caravan prepares to move on. The merchant insists on leaving you a gift, as thanks for your great hospitality. He shouts a terse command in a foreign language and a young man comes forward. #S \"This eunuch will serve you well,\"#! the merchant says. #S \"His loyalty to you, his new master, shall be beyond reproach.\"#!"
+ EVTOPTALoR.887:0 "That is very kind. I accept your gift."
+ EVTOPTBLoR.887:0 "No, you may keep your servant."
+ eunuch_declined:0 "You decline the gift."
