Added some slave trade, might replace.

--- a/localization/english/eastern_trade_l_english.yml
+++ b/localization/english/eastern_trade_l_english.yml
@@ -134,6 +134,17 @@
  EVTOPTALoR.886:0 "Tell us more about this mythical realm of Hindustan."
  eunuch_offer:0 "The merchant continues his tales."
  EVTDESCLoR.887:0 "Dawn breaks, and the caravan prepares to move on. The merchant insists on leaving you a gift, as thanks for your great hospitality. He shouts a terse command in a foreign language and a young man comes forward. #S \"This eunuch will serve you well,\"#! the merchant says. #S \"His loyalty to you, his new master, shall be beyond reproach.\"#!"
+ visit_slave_market_interaction:0 "Buy slave from"
+ visit_slave_market_interaction_desc:0 "Visit the realm of [recipient.GetFullNameNicknamed] to buy a slave."
  EVTOPTALoR.887:0 "That is very kind. I accept your gift."
  EVTOPTBLoR.887:0 "No, you may keep your servant."
  eunuch_declined:0 "You decline the gift."
+ eastern_trade.0004.title:0 "Buying a slave"
+ eastern_trade.0004.desc:0 "I am going to visit the realm of [recipient.GetFullNameNicknamed] to buy a slave. But what kind of slave shall I buy?"
+ eastern_trade.0004.a:0 "I would like to buy a eunuch."
+ eastern_trade.0004.b:0 "I would like to buy a regular male."
+ eastern_trade.0004.c:0 "I would like to buy a regular female."
+ eastern_trade.0004.d:0 "On second thought, I changed my mind."
+ eastern_trade.0005.title:0 "The slave arrives."
+ eastern_trade.0005.desc:0 "The slave has arrived."
+ eastern_trade.0005.a:0 "You better get used to your new owner."
